--- a/css/adminDash.css
+++ b/css/adminDash.css
@@ -16,6 +16,12 @@ header{
     font-size: 20px;
     padding: 10px;
 }
+.container{
+    width: 80%;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 0;
+}
 a{
     text-decoration: none;
     color: white;
