--- a/css/adminSignUp.css
+++ b/css/adminSignUp.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-color: #f1f1f1;
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -9,7 +9,7 @@ body{
     height: 100vh;
 }
 
-.container{
+.container {
     width: 400px;
     background-color: #fff;
     padding: 30px;
@@ -17,19 +17,19 @@ body{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.form-group{
+.form-group {
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
 }
 
-label{
+label {
     font-size: 18px;
     font-weight: 500;
     color: #333;
 }
 
-input{
+input {
     /* width: 100%; */
     padding: 10px;
     border: 1px solid #ccc;
@@ -37,7 +37,7 @@ input{
     font-size: 16px;
 }
 
-.btn{
+.btn {
     padding: 10px;
     border: none;
     background-color: #333;
@@ -47,7 +47,11 @@ input{
     border-radius: 5px;
 }
 
-.error{
+.btn:hover {
+    background-color: #222;
+}
+
+.error {
     color: red;
     font-size: 14px;
     margin-top: 5px;
