--- a/css/userDash.css
+++ b/css/userDash.css
@@ -91,3 +91,18 @@ textarea {
     border: 1px solid #ccc;
     resize: vertical;
 }
+
+select {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.reviewBox {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #000000;
+    border-radius: 10px;
+}
